# SVD_python_bindings

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  pyproject.toml
dist_from_docker/: svd_python_bindings-0.1.0-cp310-cp310-linux_aarch64.whl
examples/: simple_usage.py
python/svd/: __init__.py
scripts/: setup_venv.sh
src/: bindings.cpp  matrix.cpp  svd.cpp
src/svd/: matrix.hpp  svd.hpp
tests/: test_svd.py
