[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11>=2.11",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "svd-python-bindings"
version = "0.1.0"
description = "Singular Value Decomposition implemented in C++ with Python bindings via pybind11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["svd", "pybind11", "linear algebra"]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://example.com/svd-python-bindings"
Repository = "https://example.com/svd-python-bindings.git"

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/svd"]
